--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  text-align: center;
+  text-align: left;
 }
 
 .App-logo {
@@ -39,11 +39,14 @@
 
 .footer {
   background-color: #f8f9fa;
-  padding: 1rem 0;
-  position: fixed;
+  padding: 10px;
+  z-index: 1;
+  position: relative;
   bottom: 0;
   width: 100%;
   text-align: center;
+  margin-top: auto;
+  height: 30px;
 }
 
 .footer .container {
@@ -51,8 +54,48 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  height: inherit;
 }
 
 .footer .text-muted {
   color: #6c757d;
+}
+
+/* App.css */
+body, html {
+  height: 100%;
+  margin: 0;
+}
+
+.background {
+  background-image: url('../public/tech_background.jpg');
+  background-size: cover;
+  background-position: center;
+  height: 100%;
+  width: 100%;
+  opacity: 0.2;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -1; /* Ensure it is behind other content */
+}
+
+.footer a {
+  margin: 0 10px;
+  color: inherit;
+  text-decoration: none;
+}
+
+.footer hr.red-line {
+  color: #FF0000;
+  background-color: #FF0000;
+  height: 2px;
+  border: none;
+}
+
+.footer hr.black-line {
+  color: #000000;
+  background-color: #000000;
+  height: 0.5px;
+  border: none;
 }
