--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -24,6 +24,7 @@
 
 .navbar-menu {
     display: flex;
+    gap: 15px;
 }
 
 .navbar-item {
@@ -31,3 +32,17 @@
     text-decoration: none;
     color: #333;
 }
+
+.print-button {
+    background-color: #007bff;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 5px;
+  }
+  
+  .print-button:hover {
+    background-color: #0056b3;
+  }
