--- a/src/App.css
+++ b/src/App.css
@@ -37,29 +37,7 @@
   }
 }
 
-.footer {
-  background-color: #f8f9fa;
-  padding: 10px;
-  z-index: 1;
-  position: relative;
-  bottom: 0;
-  width: 100%;
-  text-align: center;
-  margin-top: auto;
-  height: 30px;
-}
 
-.footer .container {
-  background-color: #f8f9fa;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: inherit;
-}
-
-.footer .text-muted {
-  color: #6c757d;
-}
 
 /* App.css */
 body, html {
@@ -80,11 +58,6 @@ body, html {
   z-index: -1; /* Ensure it is behind other content */
 }
 
-.footer a {
-  margin: 0 10px;
-  color: inherit;
-  text-decoration: none;
-}
 
 .footer hr.red-line {
   color: #FF0000;
@@ -102,8 +75,10 @@ body, html {
 
 .App-header {
   flex: 1;
-  z-index: 1; /* Ensure header content is above the background */
+  top: 0;
+  z-index: 1000; /* Ensure header content is above the background */
   color: white;
+  position: sticky;
   text-align: center;
   padding: 20px;
 }
@@ -134,4 +109,125 @@ body, html {
   .no-print {
     display: none;
   }
+}
+
+.footer {
+  background-color: #fbfbfb;
+  color: #000000;
+  padding: 20px 0;
+  text-align: center;
+}
+
+.footer-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.footer-box {
+  margin: 10px 0;
+}
+
+.social-links a {
+  color: #fff;
+  margin: 0 10px;
+  text-decoration: none;
+  font-size: 24px;
+  transition: color 0.3s;
+}
+
+.social-links a:hover {
+  color: #ff6347; /* Change to your preferred hover color */
+}
+
+.red-line {
+  border: 1.5px solid red;
+  width: 100%;
+}
+
+.text-muted {
+  margin: 5px 0;
+  color: #fff;
+  
+}
+
+.centered-table {
+  margin: 0 auto;
+  border-collapse: collapse;
+  width: 80%;
+}
+
+.centered-table th, .centered-table td {
+  border: 1px solid #fff;
+  padding: 8px;
+  text-align: center;
+}
+
+@media (min-width: 768px) {
+  .footer-container {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .footer-box {
+    flex: 1;
+    max-width: 45%;
+    align-items: center;
+  }
+}
+
+.footer p {
+  color: #000000 !important;
+  text-align: center !important;
+}
+
+.navbar {
+  position: sticky;
+  top: 0;
+  width: 100%;
+  background-color: #f5f5f5;
+  z-index: 1;
+}
+
+.navbar-container {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px;
+}
+
+.navbar-logo {
+  font-size: 20px;
+  font-weight: bold;
+  text-decoration: none;
+  color: #333;
+}
+
+.navbar-menu {
+  display: flex;
+  gap: 15px;
+}
+
+.navbar-item {
+  margin-left: 20px;
+  text-decoration: none;
+  color: #333;
+}
+
+.print-button {
+  background-color: #007bff;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.print-button:hover {
+  background-color: #0056b3;
 }
